--- a/index.html
+++ b/index.html
@@ -230,17 +230,286 @@ background-repeat: no-repeat; background-size: cover;">
             <div class="row wow fadeIn">
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="card">
+
                         <div class="view overlay">
-                            <img class="card-img-top" src="https://sciencemuseum.images.blucommerce.com/sciencemuseum/product/NASA-LOGO-T-SHIRT-415477.jpg?auto=format%2Ccompress&bluhash=f5736a17ebad6d43144e739c49f161f8&s=64fa47786a230f21a2b1781489fb6bc3"
+                            <img class="card-img-top"
+                                 src="https://sciencemuseum.images.blucommerce.com/sciencemuseum/product/NASA-LOGO-T-SHIRT-415477.jpg?auto=format%2Ccompress&bluhash=f5736a17ebad6d43144e739c49f161f8&s=64fa47786a230f21a2b1781489fb6bc3"
                                  alt="NASA">
                             <a href="">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
+
+                        <div class="card-body text-center">
+                            <a href="#" class="grey-text">
+                                <h5>T-Shirt</h5>
+                            </a>
+                            <h5>
+                                <a href="#" class="dark-grey-text">
+                                    <strong>NASA t-shirt <span class="badge badge-pill danger-color">NEW</span></strong>
+                                </a>
+                            </h5>
+                            <h4 class="font-weight-bold blue-text">
+                                <strong>199$</strong>
+                            </h4>
+                        </div>
+
                     </div>
                 </div>
+
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card">
+
+                        <div class="view overlay">
+                            <img class="card-img-top"
+                                 src="https://sciencemuseum.images.blucommerce.com/sciencemuseum/product/NASA-LOGO-T-SHIRT-415477.jpg?auto=format%2Ccompress&bluhash=f5736a17ebad6d43144e739c49f161f8&s=64fa47786a230f21a2b1781489fb6bc3"
+                                 alt="NASA">
+                            <a href="">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+
+                        <div class="card-body text-center">
+                            <a href="#" class="grey-text">
+                                <h5>T-Shirt</h5>
+                            </a>
+                            <h5>
+                                <a href="#" class="dark-grey-text">
+                                    <strong>NASA t-shirt <span class="badge badge-pill danger-color">NEW</span></strong>
+                                </a>
+                            </h5>
+                            <h4 class="font-weight-bold blue-text">
+                                <strong>199$</strong>
+                            </h4>
+                        </div>
+
+                    </div>
+                </div>
+
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card">
+
+                        <div class="view overlay">
+                            <img class="card-img-top"
+                                 src="https://sciencemuseum.images.blucommerce.com/sciencemuseum/product/NASA-LOGO-T-SHIRT-415477.jpg?auto=format%2Ccompress&bluhash=f5736a17ebad6d43144e739c49f161f8&s=64fa47786a230f21a2b1781489fb6bc3"
+                                 alt="NASA">
+                            <a href="">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+
+                        <div class="card-body text-center">
+                            <a href="#" class="grey-text">
+                                <h5>T-Shirt</h5>
+                            </a>
+                            <h5>
+                                <a href="#" class="dark-grey-text">
+                                    <strong>NASA t-shirt <span class="badge badge-pill danger-color">NEW</span></strong>
+                                </a>
+                            </h5>
+                            <h4 class="font-weight-bold blue-text">
+                                <strong>199$</strong>
+                            </h4>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card">
+
+                        <div class="view overlay">
+                            <img class="card-img-top"
+                                 src="https://sciencemuseum.images.blucommerce.com/sciencemuseum/product/NASA-LOGO-T-SHIRT-415477.jpg?auto=format%2Ccompress&bluhash=f5736a17ebad6d43144e739c49f161f8&s=64fa47786a230f21a2b1781489fb6bc3"
+                                 alt="NASA">
+                            <a href="">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+
+                        <div class="card-body text-center">
+                            <a href="#" class="grey-text">
+                                <h5>T-Shirt</h5>
+                            </a>
+                            <h5>
+                                <a href="#" class="dark-grey-text">
+                                    <strong>NASA t-shirt <span class="badge badge-pill danger-color">NEW</span></strong>
+                                </a>
+                            </h5>
+                            <h4 class="font-weight-bold blue-text">
+                                <strong>199$</strong>
+                            </h4>
+                        </div>
+
+                    </div>
+                </div>
+
             </div>
+
+            <div class="row wow fadeIn">
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card">
+
+                        <div class="view overlay">
+                            <img class="card-img-top"
+                                 src="https://sciencemuseum.images.blucommerce.com/sciencemuseum/product/NASA-LOGO-T-SHIRT-415477.jpg?auto=format%2Ccompress&bluhash=f5736a17ebad6d43144e739c49f161f8&s=64fa47786a230f21a2b1781489fb6bc3"
+                                 alt="NASA">
+                            <a href="">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+
+                        <div class="card-body text-center">
+                            <a href="#" class="grey-text">
+                                <h5>T-Shirt</h5>
+                            </a>
+                            <h5>
+                                <a href="#" class="dark-grey-text">
+                                    <strong>NASA t-shirt <span class="badge badge-pill danger-color">NEW</span></strong>
+                                </a>
+                            </h5>
+                            <h4 class="font-weight-bold blue-text">
+                                <strong>199$</strong>
+                            </h4>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card">
+
+                        <div class="view overlay">
+                            <img class="card-img-top"
+                                 src="https://sciencemuseum.images.blucommerce.com/sciencemuseum/product/NASA-LOGO-T-SHIRT-415477.jpg?auto=format%2Ccompress&bluhash=f5736a17ebad6d43144e739c49f161f8&s=64fa47786a230f21a2b1781489fb6bc3"
+                                 alt="NASA">
+                            <a href="">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+
+                        <div class="card-body text-center">
+                            <a href="#" class="grey-text">
+                                <h5>T-Shirt</h5>
+                            </a>
+                            <h5>
+                                <a href="#" class="dark-grey-text">
+                                    <strong>NASA t-shirt <span class="badge badge-pill danger-color">NEW</span></strong>
+                                </a>
+                            </h5>
+                            <h4 class="font-weight-bold blue-text">
+                                <strong>199$</strong>
+                            </h4>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card">
+
+                        <div class="view overlay">
+                            <img class="card-img-top"
+                                 src="https://sciencemuseum.images.blucommerce.com/sciencemuseum/product/NASA-LOGO-T-SHIRT-415477.jpg?auto=format%2Ccompress&bluhash=f5736a17ebad6d43144e739c49f161f8&s=64fa47786a230f21a2b1781489fb6bc3"
+                                 alt="NASA">
+                            <a href="">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+
+                        <div class="card-body text-center">
+                            <a href="#" class="grey-text">
+                                <h5>T-Shirt</h5>
+                            </a>
+                            <h5>
+                                <a href="#" class="dark-grey-text">
+                                    <strong>NASA t-shirt <span class="badge badge-pill danger-color">NEW</span></strong>
+                                </a>
+                            </h5>
+                            <h4 class="font-weight-bold blue-text">
+                                <strong>199$</strong>
+                            </h4>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card">
+
+                        <div class="view overlay">
+                            <img class="card-img-top"
+                                 src="https://sciencemuseum.images.blucommerce.com/sciencemuseum/product/NASA-LOGO-T-SHIRT-415477.jpg?auto=format%2Ccompress&bluhash=f5736a17ebad6d43144e739c49f161f8&s=64fa47786a230f21a2b1781489fb6bc3"
+                                 alt="NASA">
+                            <a href="">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+
+                        <div class="card-body text-center">
+                            <a href="#" class="grey-text">
+                                <h5>T-Shirt</h5>
+                            </a>
+                            <h5>
+                                <a href="#" class="dark-grey-text">
+                                    <strong>NASA t-shirt <span class="badge badge-pill danger-color">NEW</span></strong>
+                                </a>
+                            </h5>
+                            <h4 class="font-weight-bold blue-text">
+                                <strong>199$</strong>
+                            </h4>
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+
         </section>
+
+        <nav class="d-flex justify-content-center wow fadeIn">
+            <ul class="pagination pg-blue">
+                <li class="page-item disabled">
+                    <a href="#" class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item active">
+                    <a href="#" class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">1</span>
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a href="#" class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">2</span>
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a href="#" class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">3</span>
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a href="#" class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">4</span>
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a href="#" class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">5</span>
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a href="#" class="page-link" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </main>
 <!-- SCRIPTS -->
