--- a/index.html
+++ b/index.html
@@ -287,7 +287,6 @@ background-repeat: no-repeat; background-size: cover;">
                     </div>
                 </div>
 
-
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="card">
 
@@ -512,6 +511,48 @@ background-repeat: no-repeat; background-size: cover;">
         </nav>
     </div>
 </main>
+
+
+<footer class="page-footer text-center font-small mt-4 wow fadeIn">
+    <div class="pt-4">
+        <a href="#" role="button" class="btn btn-outline-white ml-2">WBD <i class="fa fa-graduation-cap"></i>
+        </a>
+        <a href="#" role="button" class="btn btn-outline-white ml-2">Online Shop <i class="fa fa-graduation-cap"></i>
+        </a>
+    </div>
+    <hr class="my-4">
+    <div class="pb-4">
+        <a href="#">
+            <i class="fab fa-facebook-f mr-3"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-twitter mr-3"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-youtube mr-3"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-google-plus mr-3"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-instagram mr-3"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-dribbble mr-3"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-pinterest mr-3"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-github mr-3"></i>
+        </a>
+
+    </div>
+    <div class="footer-copyright py-3">
+        @All Rights Reserved
+    </div>
+</footer>
+
 <!-- SCRIPTS -->
 <!-- JQuery -->
 <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
