finish mdb shop

--- a/index.html
+++ b/index.html
@@ -562,6 +562,9 @@ background-repeat: no-repeat; background-size: cover;">
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="js/mdb.min.js"></script>
+<script>
+    new WOW().init();
+</script>
 </body>
 
 </html>
