--- a/shop-page.html
+++ b/shop-page.html
@@ -102,6 +102,65 @@
             <div class="col-md-6 mb-4">
                 <img src="https://i.eldorado.ua/goods_images/1039096/6044451.jpg" alt="macbool" class="img-fluid">
             </div>
+            <div class="col-md-6 mb-4">
+                <div class="p-4">
+                    <div class="mb-3">
+                        <a href="#">
+                            <span class="badge purple mr-1">Category 2</span>
+                        </a>
+                        <a href="#">
+                            <span class="badge blue mr-1">New </span>
+                        </a>
+                        <a href="#">
+                            <span class="badge red mr-1">Bestseller</span>
+                        </a>
+                    </div>
+                    <p class="lead">
+                        <span class="mr-1">
+                            <del>200$</del>
+                        </span>
+                        <span class="mr-1">
+                            100$
+                        </span>
+                    </p>
+                    <p class="lead font-weight-bold">Descpription</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, blanditiis dolorem dolores
+                        et hic mollitia natus quaerat sequi sit! A consectetur distinctio officiis veniam? Aperiam
+                        corporis dignissimos quaerat qui rerum?</p>
+                    <form action="" class="d-flex justify-content-left">
+                        <input type="number" value="1" aria-label="Search" style="width: 100px" class="form-control">
+                        <button type="submit" class="btn btn-primary btn-md my-0 p">
+                            Add to cart <i class="fa fa-shopping-cart ml-1"></i>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row d-flex justify-content-center wow fadeIn">
+            <div class="col-md-6 text-center">
+                <h4 class="my-4 h4">Additional information</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consectetur deserunt enim id
+                    illo illum ipsum libero natus nisi pariatur reiciendis rem rerum sed sunt suscipit ullam, veritatis.
+                    Commodi, cupiditate!</p>
+            </div>
+        </div>
+
+        <div class="row wow fadeIn">
+            <div class="col-lg-4 col-md-12 mb-4">
+                <img src="https://i2.rozetka.ua/goods/12479482/94366274_images_12479482154.jpg"
+                     alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-4 col-md-12 mb-4">
+                <img src="https://static.re-store.ru/upload/resize_cache/iblock/38f/1120_770_17f5c944b3b71591cc9304fac25365de2/38f06fb8b607330b257404d292425517.jpg"
+                     alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-4 col-md-12 mb-4">
+                <img src="https://zdnet2.cbsistatic.com/hub/i/r/2019/04/08/5351de40-97a4-48f9-ba0e-58776fcbfb57/resize/1200x675/3eae66f0c9c85b56c68c6c2a6d29923c/imac-2019-header.jpg"
+                     alt="" class="img-fluid">
+            </div>
         </div>
     </div>
 </main>
@@ -155,6 +214,9 @@
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="js/mdb.min.js"></script>
+<script>
+    new WOW().init();
+</script>
 </body>
 
 </html>
